faqs alignements issues fixed

--- a/findly-builder/src/app/components/add-alt-faq/add-alt-faq.component.scss
+++ b/findly-builder/src/app/components/add-alt-faq/add-alt-faq.component.scss
@@ -93,6 +93,7 @@
             margin: 0;
             top: 6px;
             left: 10px;
+            height: 18px;
             span{
                 font-weight: 400 !important;
                 color: #9B9B9B !important;
