--- a/findly-builder/src/app/helpers/components/confirmation-dialog/confirmation-dialog.component.scss
+++ b/findly-builder/src/app/helpers/components/confirmation-dialog/confirmation-dialog.component.scss
@@ -8,8 +8,8 @@
         font-weight: 300;
         color: $primaryColor;
         border-radius: 4px;
-        background-color: $backgroundColor;
-        padding: 12px;
+        background-color: $backgroundColor;        
+        padding: 20px 15px;
     }
     .m-body{
         padding: 0 43px;
@@ -32,7 +32,7 @@
     .m-footer{
         border-radius: 4px;
         background-color: $backgroundColor;
-        padding: 17px;
+        padding: 15px;
         position: absolute;
         bottom: 0;
         width: 100%;
